--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_main.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="@color/button_blue"
+            android:background="@drawable/ripple_effect"
             android:onClick="onChatClicked"
             android:text="@string/chat_button"
             android:textColor="@android:color/white"
