--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
@@ -9,6 +9,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_app_partner_logo" />
+        android:src="@drawable/ic_app_partner_logo"
+        android:id="@+id/iv_app_partner_logo"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_face"
+        android:layout_alignParentBottom="true"
+        android:background="@color/button_mango"
+        android:textColor="@android:color/white"
+        android:text="@string/fade_button"
+        android:foreground="?attr/selectableItemBackground"/>
 
 </RelativeLayout>
