--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_chat.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_chat.xml
@@ -3,7 +3,9 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".chat.ChatActivity">
+                tools:context=".chat.ChatActivity"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
