--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/item_chat.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/item_chat.xml
@@ -8,7 +8,11 @@
               android:gravity="center_vertical"
               android:orientation="horizontal"
               tools:background="@color/background"
-              tools:ignore="UseCompoundDrawables">
+              tools:ignore="UseCompoundDrawables"
+              android:layout_marginTop="9dp"
+              android:layout_marginBottom="9dp"
+              android:layout_marginLeft="@dimen/activity_vertical_margin"
+              android:layout_marginRight="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/avatarImageView"
