--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
@@ -4,9 +4,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.apppartner.androidtest.animation.AnimationActivity"
-    android:paddingLeft="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_horizontal_margin">
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:id="@+id/anim_container">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -17,7 +18,7 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:id="@+id/btn_face"
         android:layout_alignParentBottom="true"
         android:background="@color/button_mango"
