--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/item_chat.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/item_chat.xml
@@ -9,10 +9,10 @@
               android:orientation="horizontal"
               tools:background="@color/background"
               tools:ignore="UseCompoundDrawables"
-              android:layout_marginTop="9dp"
-              android:layout_marginBottom="9dp"
-              android:layout_marginLeft="@dimen/activity_vertical_margin"
-              android:layout_marginRight="@dimen/activity_vertical_margin">
+              android:paddingLeft="@dimen/activity_vertical_margin"
+              android:paddingRight="@dimen/activity_vertical_margin"
+              android:paddingBottom="9dp"
+              android:paddingTop="9dp">
 
     <ImageView
         android:id="@+id/avatarImageView"
