--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
@@ -4,9 +4,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.apppartner.androidtest.animation.AnimationActivity"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:id="@+id/anim_container">
 
     <ImageView
@@ -14,8 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/ic_app_partner_logo"
-        android:id="@+id/iv_app_partner_logo"
-        android:background="@drawable/border"/>
+        android:id="@+id/iv_app_partner_logo"/>
 
     <Button
         android:layout_width="match_parent"
@@ -25,6 +21,9 @@
         android:background="@color/button_mango"
         android:textColor="@android:color/white"
         android:text="@string/fade_button"
-        android:foreground="?attr/selectableItemBackground"/>
+        android:foreground="?attr/selectableItemBackground"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
 </RelativeLayout>
