--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_animation.xml
@@ -15,12 +15,13 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/button_height"
         android:id="@+id/btn_face"
         android:layout_alignParentBottom="true"
         android:background="@color/button_mango"
         android:textColor="@android:color/white"
         android:text="@string/fade_button"
+        android:textSize="@dimen/button_text_size"
         android:foreground="?attr/selectableItemBackground"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
