--- a/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_login.xml
+++ b/Android_Test/AndroidProgrammerTest/app/src/main/res/layout/activity_login.xml
@@ -7,4 +7,32 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 tools:context="com.apppartner.androidtest.login.LoginActivity">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:id="@+id/et_username"
+        android:layout_marginTop="48dp"
+        android:hint="@string/login_username"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:id="@+id/et_password"
+        android:layout_below="@id/et_username"
+        android:inputType="textPassword"
+        android:layout_marginTop="24dp"
+        android:hint="@string/login_password"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:id="@+id/btn_login"
+        android:background="@color/button_orange"
+        android:text="@string/login_button"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/button_text_size"
+        android:layout_below="@id/et_password"
+        android:layout_marginTop="60dp"
+        android:foreground="?attr/selectableItemBackground"/>
+
 </RelativeLayout>
